2007-07-30  Tomas Frydrych  <tf@openedhand.com>

	* clutter/clutter-actor.c:

	Fixed incorrect order of modelview matrix stack in calculating
	actor vertices.

2007-07-30  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-backend.h:
	Remove #if 0's old backend_api 
	(generating uneeded documentation)

2007-07-30  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-texture.c:
	Fix re-relisation for large tiled textures.
	* tests/test-textures.c: (main):
	Add a show/hide to trigger above (see #442)

2007-07-29  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-types.h: Document ClutterGravity enumeration
	and remove the only incomplete symbol of the api reference. Now
	we are up to 79% documented symbols.

2007-07-29  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-media.c: Document ClutterMedia signals;
	replace the implementation of clutter_media_set_filename() with
	something a wee bit more robust (and portable) than a sprintf().

2007-07-29  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-behaviour-ellipse.c: Documentation
	fixes; kill some indirections; freeze the notification
	queue when (potentially) emitting multiple notify
	signals.

	* clutter/clutter-alpha.h: Remove the unused macro
	CLUTTER_TYPE_SMOOTHSTEP.

2007-07-28  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-actor.[ch]: Use GInitiallyUnowned
	as the parent structure in the ClutterActor structure
	definition; somehow, this has escaped everyone attention
	in one year and a half. Luckily, GInitiallyUnowned is
	as big as GObject.
	 
	 (clutter_actor_get_abs_position_units),
	 (clutter_actor_get_abs_position): Check parameters.

	 * clutter/clutter-texture.h: Unmangle the flags enum
	 type declaration, so that dumb parsers like h2defs.py
	 are not fooled.

	 * clutter/clutter-behaviour-ellipse.[ch]:
	 * clutter/clutter-effect.c: Fix some documentation
	 issues and make gtk-doc happy.

2007-07-27  Tomas Frydrych  <tf@openedhand.com>
